Use full filename for all local imports
In preparation for a potential change to miniSphere where all
locally-sourced imports must use their complete filename to be loaded.
This is also needed for compatibility with Oozaru, where extensionless
imports are actually impossible to support.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,9 +7,10 @@ parserOptions:
 globals:
   global: true
   console: true
-  require: true
   Sphere: true
+  BlendOp: true
   Color: true
+  DepthOp: true
   DirectoryStream: true
   Dispatch: true
   FS: true
