--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Test Sphere game using SpheRun",
+			"label": "Test Sphere game",
 			"type": "shell",
 			"command": "spherun",
 			"args": [
@@ -17,7 +17,7 @@
 			}
 		},
 		{
-			"label": "Build Sphere game using Cell",
+			"label": "Build Sphere game",
 			"type": "shell",
 			"command": "cell",
 			"group": {
