Change segment size of HP gauges
Party members now have 500 HP per segment, up from 250, while bosses
have been reduced from 2000 HP to 1000 HP per segment, they way it used
to be.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
             "name": "Run in neoSphere",
             "type": "f5anything",
             "request": "launch",
-            "command": "cell && echo. && spherun dist",
+            "command": "cell && spherun dist",
             "showTerminal": false
         }
     ]
