Use Abigail's nickname
Now shows as "Abby" on-screen.  Her full name is still displayed when
targeting her in-battle, of course.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,7 @@
 {
     "configurations": [
         {
-            "name": "Run in neoSphere",
+            "name": "neoSphere",
             "type": "f5anything",
             "request": "launch",
             "command": "cell && spherun dist",
